 * Fix support for C* Tuples in Dataframes (SPARKC-357)

1.6.0 M2
 * Performance improvement: keyBy creates an RDD with CassandraPartitioner 
   so shuffling can be avoided in many cases, e.g. when keyBy is followed
   by groupByKey or join (SPARKC-330)
 * Improved exception message when data frame is to be saved in 
   non-empty Cassandra table (SPARKC-338)
 * Support for Joda time for Cassandra date type (SPARKC-342)
 * Don't double resolve the paths for port locks in embedded C* 
   (contribution by crakjie)
 * Drop indices that cannot be used in predicate pushdown (SPARKC-347)
 * Added support for IF NOT EXISTS (SPARKC-362)
 * Nested Optional Case Class can be save as UDT (SPARKC-346)
 * Merged Java API into main module (SPARKC-335)
 * Upgraded to Spark 1.6.1 (SPARKC-344)
 * Fix NoSuchElementException when fetching database schema from Cassandra
   (SPARKC-341)
 * Removed the ability to specify cluster alias directly and added some helper methods 
   which make it easier to configure Cassandra related data frames (SPARKC-289)

1.6.0 M1
 * Adds the ability to add additional Predicate Pushdown Rules at Runtime (SPARKC-308)
 * Added CassandraOption for Skipping Columns when Writing to C* (SPARKC-283)
 * Upgrade Spark to 1.6.0 and add Apache Snapshot repository to resolvers (SPARKC-272, SPARKC-298, SPARKC-305)
 * Includes all patches up to 1.5.0.

********************************************************************************

1.5.0
 * Fixed assembly build (SPARKC-311)
 * Upgrade Cassandra version to 3.0.2 by default and allow to specify arbitrary Cassandra version for
   integration tests through the command line (SPARKC-307)
 * Upgrade Cassandra driver to 3.0.0 GA
 * Includes all patches up to 1.4.2.

1.5.0 RC1
 * Fix special case types in SqlRowWriter (SPARKC-306)
 * Fix sbt assembly
 * Create Cassandra Schema from DataFrame (SPARKC-231)
 * JWCT inherits Spark Conf from Spark Context (SPARKC-294)
 * Support of new Cassandra Date and Time types (SPARKC-277)